--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>A Database of Scottish Witchcraft</title>
+  <title>Group Three Blog</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -33,10 +33,8 @@
   <!--Navigation-->
   <ul>
       <li><a class="active" href="#home">Home</a></li>
-      <li class="right"><a href="#introduction">Introduction</a></li>
       <li class="right"><a href="#about">About</a></li>
-      <li class="right"><a href="#maps">Maps</a></li>
-      <li class="right"><a href="#gallery">Gallery</a></li>
+      <li class="right"><a href="#members">Members</a></li>
     </ul>
 
   <!-- Primary Page Layout
@@ -44,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column text" style="margin-top: 25%">
-        <h4>A Database of Scottish Witchcraft</h4>
+        <h4>Group Three Blog</h4>
         <p></p>
       </div>
     </div>
