Added Blog Post 1 to index.html
Initial blog post, maybe look into changing how we upload the blog posts in the furture.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,92 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column text" style="margin-top: 25%">
+      <div class="column text" style="margin-top: 25%">
         <h4>Group Three Blog</h4>
-        <p></p>
+        <hr>
+<!-- Blog Post 1 -->
+        <h5>10/7/2020 - What is Digital Humanities?</h5>
+        <p>
+          <b>1. Digital Humanities is at the intersection of traditional humanities subjects and modern computational methods.</b>
+          <br>
+          According to Burdick et al, there is a significant “disconnect” between traditional methods of studying humanities “inherited from cloisters and seminar rooms” and our “massively mediated culture” (24). The emergence of digital humanities has begun to rebuild that connection, combining aspects of both traditional and modern methods. 
+        </p>
+        <p>
+          <b>2. Digital Humanities is an extension of traditional knowledge skills and methods, not a replacement for them.</b>
+          <br>
+          Digital Humanities does not rely solely on the use of digital tools and engagement, but it takes advantage of these tools to explore traditional concepts in new ways. In <i>Digital_Humanities</i>, Burdick explains, “Its distinctive contributions do not obliterate the insights of the past, but add and supplement the humanities’ long-standing commitment to scholarly interpretation, informed research, structured argument, and dialogue within communities of practice” (16). For example, in <i>Data Points</i>, Nathan Yau mentions Santiago Ortiz’s “View of the Sky,” which visualizes the stars in several different ways (36). Some of these visualizations are similar to a classic astronomy map that can be seen in many traditional classrooms. In other visualizations, however, Ortiz uses digital tools and manipulation to give new perspective and meaning to the same data. 
+        </p>
+        <p>
+          <b>3. Digital humanities projects are inherently collaborative and generative. </b>
+          <br>
+          Whereas traditional humanities research relies on individual achievements, Burdick et al. argues that “digital projects of any substantial scale benefit from and, indeed, often require team-based approaches” (15). A shift toward collaboration could bring much-needed diversity of voices and perspectives to the academic world, allowing for the exploration of new ideas and innovative ways of portraying them. 
+        </p>
+        <p>
+          <b>4. Digital humanities expands the study of the humanities by offering more ways for it to display data.</b>
+          <br>
+          Since its inception, the humanities have relied on writing and text to display data (Burdick 7). This reliance has limited the interpretations that the field can produce, as the method of display itself can influence how the data is interpreted (Yau 6). The digital humanities offer various tools and methods to visually display data that allows researchers to explore the humanities’ data in new and interesting ways, creating a more nuanced investigation of the data that can benefit the field of humanities as a whole.
+        </p>
+        <p>
+          <b>5. Digital data visualization offers new ways to look at human history. </b>
+          <br>
+          Trouillot observes that humans are most captivated by the large, material markers of history such as mass graves and pyramids, which “bring history closer while they make us feel small” and “seem to speak of an immensity of which we know little except that we are part of it” (29-30). Digital humanities offers a counter to this immensity through analysis and visualization of data. The balance of detailed data analysis alongside these captivating material objects creates a more nuanced way to look at the past. 
+        </p>
+        <p>
+          <b>6. Digital Humanities expands the humanities by creating new forms of collaboration.</b>
+          <br>
+          In <i>Digital_Humanities</i>, Burdick highlights the multitude of collaborative mediums that the study of digital humanities curates, where there is “ample room for specialization and, particularly, for collaboration” because digital humanities projects “often require team-based approaches” (15). A worldwide platform for dialogue provided by digital tools, expanding humanities into the hands of others, when before this would never have been available without technological advances. 
+        </p>
+        <p>
+          <b>7. The humanities offer a rich selection of contextualized data that statisticians and other interested parties can explore in the digital humanities.</b>
+          <br>
+          Thorough evaluation of data requires clear contextualization. As statistician and data visualization expert, Nathan Yau states, contextualization “can completely change your perspective on a dataset, and it can help you decide what the numbers represent and how to interpret them.” (Yau 35). Luckily for statisticians and others who work in the digital realm, the humanities have created an extensive reservoir of contextualized data ready to be analyzed. 
+        </p>
+        <p>
+          <b>8. Digital Humanities invites a wider audience into specified fields through the use of meaningful visualizations. </b>
+          <br>
+          In his work <i>Data Points</i>, Nathan Yau writes, “Analysis and storytelling are one in the same” (15). Good visualization helps portray what would otherwise be an overwhelming amount of raw data for people to comprehend, using both statistics and design skills to articulate the data into a cohesive story. “Without the former, the visualization becomes an exercise only in illustration and aesthetics, and without the latter, one of only analyses” (Yau xi). For example, Aaron Parecki, a Portland-based developer, used 2.5 million GPS points of his daily whereabouts to create a personal atlas (Yau 8), presenting the audience with both implied meaning and personalized interpretation of his massive dataset. 
+        </p>
+        <p>
+          <b>9. Digital humanities highlight social inequalities.</b>
+          <br>
+          The field of digital humanities is an excellent field for public projects that highlight inequalities in society. Projects like <i>Public Secret</i> and <i>Million Dollar Hoods</i> both focus on the problems of mass incarceration in California. The researcher of <i>Public Secret</i>, Sharron Daniel, sees her project as an abolitionist project “that aims to dismantle the prison system in pursuit of a more humane world.” Similarly, <i>Million Dollar Hoods</i> states that its goal is “to end mass incarceration” (Lytle). The publication of these projects on accessible websites allows for the information displayed to inform the general public.
+        </p>
+        <p>
+          <b>10. Digital Humanities offers a potential renewal for “humanistic scholarship.”
+          </b>
+          <br>
+          In <i>Digital_Humanities</i>, Burdick et al explain how their book seeks to “demonstrate the contributions of contemporary humanities scholarship to new modes of knowledge formation enabled by networked, digital environments” (7). While the humanities are often considered to be in “crisis,” investment in digital humanities can counter the field’s demise. Digital humanities positions itself to combine traditional long-form written text with new digital methods. This has the potential to “save” the humanities, by expanding the common definition of the humanities itself.
+        </p>
+        <p>
+          <b>11. Digital Humanities addresses the increasingly varied forms in which we communicate.</b>
+          <br>
+          As Burdick et al points out, “in the 21st century, we communicate in media significantly more varied, extensible, and multiplicative than linear text” (10). This varied media might include blogs, videos, social media, and more. No longer is linear text the only viable way to look at the humanities. Digital humanities looks to remedy this by providing new ways to analyze and look at the work as it evolves and changes.
+        </p>
+        <p>
+          <b>12. Digital Humanities helps address the increasingly globalized world we live in.</b>
+          <br>
+          As the world becomes more globalized and interconnected, the western views that have shaped much of the humanities become increasingly outdated. When referencing comparisons of European language with differing types of language in “Silencing the Past,” Trouillot explains, “we now know that both sides were wrong; grammar functions in all languages. Could the same be said about history...?” (7). Digital humanities opens the door for more broad and globalized views, creating new ways to question and analyze language and history.
+        </p>
+        <p>
+          <b>Citation</b>
+          <br><br>
+          Burdick, Anne, Johanna Drucker, Peter Lunenfeld, Todd Presner, Jeffrey Schnapp. Digital_Humanities. Cambridge, MA: MIT Press, 2012.
+          <br><br>
+          Daniel, Sharon, and Erik Loyer. “Public Secrets: Editor's Introduction.” Vectors Journal: Public Secrets, January 16, 2007. http://vectors.usc.edu/projects/index.php?project=57.
+          <br><br>
+          Lytle Hernandez, Kelly, and Danielle Dupuy. “Welcome To Million Dollar Hoods.” Million Dollar Hoods, July 22, 2020. https://milliondollarhoods.pre.ss.ucla.edu/.
+          <br><br>
+          Trouillot, Michel-Rolph. Silencing the Past: Power and the Production of History. Boston, MA: Beacon Press Books, 1995.
+          <br><br>
+          Riley, Jenn. Understanding Meta: What is Metadata and What Is It For? Baltimore, MD: National Information Standards Organization, 2017.
+          <br><br>
+          Sack, Warren. The Software Arts. Cambridge, MA: MIT Press, 2019.
+          <br><br>
+          Yau, Nathan. Data Points: Visualization that Means Something. Indianapolis, IN: John Wiley & Sons Inc, 2013.
+        </p>
+        <hr>
+
+<!-- Blog Post 1 END -->
       </div>
     </div>
   </div>
