Added smaller font size class for citations

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <br>
           As the world becomes more globalized and interconnected, the western views that have shaped much of the humanities become increasingly outdated. When referencing comparisons of European language with differing types of language in “Silencing the Past,” Trouillot explains, “we now know that both sides were wrong; grammar functions in all languages. Could the same be said about history...?” (7). Digital humanities opens the door for more broad and globalized views, creating new ways to question and analyze language and history.
         </p>
-        <p>
+        <p class="citation">
           <b>Citation</b>
           <br><br>
           Burdick, Anne, Johanna Drucker, Peter Lunenfeld, Todd Presner, Jeffrey Schnapp. Digital_Humanities. Cambridge, MA: MIT Press, 2012.
