--- a/index.html
+++ b/index.html
@@ -147,6 +147,95 @@
           Julian Goodare, Lauren Martin, Joyce Miller and Louise Yeoman, 'The Survey of Scottish Witchcraft', www.shc.ed.ac.uk/witches/ (archived January 2003, accessed October 2020).
         </p>
         <hr>
+        <h5>10/14/2020 - Research Questions</h5>
+        <p>
+          1.  What is the correlation between location (of both the accused and site of the trial) and severity of punishment sentenced to the accused?
+          <br><br>
+          2. What is the connection between the time of year and the number of accused witches? Possibly showing an influence of weather conditions on attitudes towards accused witches. 
+          <br><br>
+          3. Is the “Witch Gene” passed between immediate family members? If one member of the family is accused does that mean other relatives are likely to be seen as witches as well?
+          <br><br>
+          4. Is there any prejudice towards someone being a witch based on their ethnic background?
+          <br><br>
+          5. Did gender play a significant role in who was accused and why might this be?
+          <br><br>
+          6. Did marital status play a significant role in who was accused and does it correlate to social status?
+          <br><br>
+          7. Did past crimes or convictions contribute to accusations of being a witch?
+          <br><br>
+          8. Was the location within the town significant in who was accused?
+          <br><br>
+          9. How did conflict (ie. wars, revolution, famine) in Scotland affect the rate of witch accusations?
+          <br><br>
+          10. How did conflict (ie. wars, revolution, famine) in Scotland affect the ration acquitted to those punished?
+          <br><br>
+          11. How did the publishing of witchcraft accounts affect the number of accused witches?
+          <br><br>
+          12. How did the publishing of witchcraft accounts affect the characterization of accusations?
+          <br><br>
+          13. How did a spike of witch accusations in a given area of Scotland affect rates of accusations in other areas? 
+          <br><br>
+          14. What is the impact/correlation of different demographics (gender, marital status, etc) affect the type of witchcraft they were accused of? 
+          <br><br>
+          15. How did scientific and medical advancements in Europe in the 16th and 17th centuries affect the rate of witchcraft accusations, and what witches were being accused for?
+          <br>
+          <hr>
+
+          <h5>10/14/2020 - Bibliography</h5>
+          <p class="indent">
+            Adams, W.H <i>Witch Warlock, and Magician Historical Sketches of Magic and Witchcraft in England and Scotland.</i> Project Gutenberg.
+          </p>
+          <p class="indent">
+            Beel, David, Claire Wallace, Gemma Webster, and Hai Nguyen. “The Geographies of Community History Digital Archives in Rural Scotland.“<i> Scottish Geographical Journal.</i> 131, Sep/Dec (2015): 201-211.
+          </p>
+          <p class="indent">
+            Cowan, Edward J., and Lizanne Henderson.<i> History of Everyday Life in Medieval Scotland.</i> Edinburgh: Edinburgh University Press, 2011.
+          </p>
+          <p class="indent">
+            Dye, Sierra. “To Converse with the Devil? Speech, Sexuality, and Witchcraft in Early Modern Scotland.”<i> International Review of Scottish Studies</i> 37 (2012): 9
+          </p>
+          <p class="indent">
+            Good, Julian, Alasdair A. MacDonald.<i> Sixteenth-Century Scotland: Essays in Honour of Michael Lynch.</i> Leiden and Boston: Brill, 2008.
+          </p>
+          <p class="indent">
+            Kirkpatrick Sharpe, Charles.<i> A Historical Account of the Belief in Witchcraft in Scotland. </i> Wakefield: SR Publishes, 1972.
+          </p>
+          <p class="indent">
+            Koning, Niek. "Witchcraft Beliefs and Witch Hunts: An Interdisciplinary Explanation." <i> Human Nature : An Interdisciplinary Biosocial Perspective </i> 24, no. 2 (06, 2013): 158-181.
+          </p>
+          <p class="indent">
+            Popkin, Beate. "Wives, Mothers, and Witches: The Learned Discourse about Women in Early Modern Europe." <i> Journal of Women's History</i> 8, no. 3 (Fall, 1996): 193. 
+          </p>
+          <p class="indent">
+            Levack, Brain P. <i> The Witch-Hunt in Early Modern Europe</i> London and New York: Longman, 1987.
+          </p>
+
+          <p class="indent">
+            Sharpe, James. "In Search of the English Sabbat: Popular Conceptions of Witches' Meetings in Early Modern England."<i> Journal of Early Modern Studies</i> no. 2 (2013): 161-183.
+          </p>
+          <p class="indent">
+            Todd, Margo.<i> The Culture of Protestantism in Early Modern Scotland. </i> New Haven: Yale University Press, 2002.
+          </p>
+
+          <p class="indent">
+            Wasser, Michael. “The Privy Council and the Witches: The Curtailment of Witchcraft Prosecutions in Scotland, 1597-1628.”<i> Scottish Historical Review </i> 82, no. 1 (2003): 20-46.
+          </p>
+          <p class="indent">
+            Willumsen, Liv Helene.<i> Witches of the North: Scotland and Finnmark. </i> Studies in MEdieval and Reformation Traditions, v. 170 Leiden: Brill 2013.
+          </p>
+          <p class="indent">
+            Wimbish, Whitney Curry. “Thar Be Witches, and Us.” The New York Times. The New York Times, October 25, 2019. 
+          </p>
+          <p class="indent">
+            Zwissler, Laurel. "In the Study of the Witch: Women, Shadows, and the Academic Study of Religions." <i>Religions</i>9, no. 4 (2018): 105. 
+          </p>
+          <p class="indent">
+            _______. “Counting Witches: Illuminating and Distorting the Shape of Witchcraft Accusations in Scotland.”<i>Religions</i>37, no. 1 (2017): 1-18.
+          </p>
+          <p class="indent">
+            _______. “Henddeson, Witchcraft and Folk Belief in the Age of Enlightenment. Scotland, 1670-1740.”<i>Scottish Historical Review </i>98, no. 2 (2019): 315-317.
+          </p>
+        
 
 <!-- Blog Post 1 END -->
       </div>
