--- a/index.html
+++ b/index.html
@@ -52,71 +52,71 @@
         <hr>
         <h5>10/14/2020 - Bibliography</h5>
         
-        <p class="indent">
+        <p class="hanging-indent">
           Adams, W.H <i>Witch Warlock, and Magician Historical Sketches of Magic and Witchcraft in England and
             Scotland.</i> Project Gutenberg.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Beel, David, Claire Wallace, Gemma Webster, and Hai Nguyen. “The Geographies of Community History Digital
           Archives in Rural Scotland.“<i> Scottish Geographical Journal.</i> 131, Sep/Dec (2015): 201-211.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Cowan, Edward J., and Lizanne Henderson.<i> History of Everyday Life in Medieval Scotland.</i> Edinburgh:
           Edinburgh University Press, 2011.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Dye, Sierra. “To Converse with the Devil? Speech, Sexuality, and Witchcraft in Early Modern Scotland.”<i>
             International Review of Scottish Studies</i> 37 (2012): 9
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Good, Julian, Alasdair A. MacDonald.<i> Sixteenth-Century Scotland: Essays in Honour of Michael Lynch.</i>
           Leiden and Boston: Brill, 2008.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Kirkpatrick Sharpe, Charles.<i> A Historical Account of the Belief in Witchcraft in Scotland. </i> Wakefield:
           SR Publishes, 1972.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Koning, Niek. "Witchcraft Beliefs and Witch Hunts: An Interdisciplinary Explanation." <i> Human Nature : An
             Interdisciplinary Biosocial Perspective </i> 24, no. 2 (06, 2013): 158-181.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Popkin, Beate. "Wives, Mothers, and Witches: The Learned Discourse about Women in Early Modern Europe." <i>
             Journal of Women's History</i> 8, no. 3 (Fall, 1996): 193.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Levack, Brain P. <i> The Witch-Hunt in Early Modern Europe</i> London and New York: Longman, 1987.
         </p>
 
-        <p class="indent">
+        <p class="hanging-indent">
           Sharpe, James. "In Search of the English Sabbat: Popular Conceptions of Witches' Meetings in Early Modern
           England."<i> Journal of Early Modern Studies</i> no. 2 (2013): 161-183.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Todd, Margo.<i> The Culture of Protestantism in Early Modern Scotland. </i> New Haven: Yale University Press,
           2002.
         </p>
 
-        <p class="indent">
+        <p class="hanging-indent">
           Wasser, Michael. “The Privy Council and the Witches: The Curtailment of Witchcraft Prosecutions in Scotland,
           1597-1628.”<i> Scottish Historical Review </i> 82, no. 1 (2003): 20-46.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Willumsen, Liv Helene.<i> Witches of the North: Scotland and Finnmark. </i> Studies in MEdieval and
           Reformation Traditions, v. 170 Leiden: Brill 2013.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Wimbish, Whitney Curry. “Thar Be Witches, and Us.” The New York Times. The New York Times, October 25, 2019.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           Zwissler, Laurel. "In the Study of the Witch: Women, Shadows, and the Academic Study of Religions."
           <i>Religions</i>9, no. 4 (2018): 105.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           _______. “Counting Witches: Illuminating and Distorting the Shape of Witchcraft Accusations in
           Scotland.”<i>Religions</i>37, no. 1 (2017): 1-18.
         </p>
-        <p class="indent">
+        <p class="hanging-indent">
           _______. “Henddeson, Witchcraft and Folk Belief in the Age of Enlightenment. Scotland, 1670-1740.”<i>Scottish
             Historical Review </i>98, no. 2 (2019): 315-317.
         </p>
